--- a/assets/css/style-freedom.css
+++ b/assets/css/style-freedom.css
@@ -152,9 +152,13 @@ align-items: center;
     padding: 1rem 0;
     background-color: #d1d1d1;
 }
+.meru{
+    margin: 1.5rem;
+}
+
 .kili_link{
     padding: 10px 20px;
-    margin: 1rem 0;
+    margin: 1rem ;
 }
 .hotel_content_kili{
     padding: 6rem 0;
@@ -227,6 +231,7 @@ font-size: 14px;
     width: 100%;
     object-fit: cover;
 }
+
 .col-2 img{
     height: 300px;
     width: 100%;
@@ -236,9 +241,21 @@ font-size: 14px;
     flex: 1;
     margin: 0 .5rem;
 }
+.tour_description{
+    margin: 2rem 0;
+    text-transform: uppercase;
+    color: #2c3e50;
+}
+.included{
+    margin: 1.3rem 0;
+    color: #777;
+    line-height: 1.9em;
+    letter-spacing: 1px;
+    margin-bottom: 0;
+}
 .maasai{
     padding: 1rem;
-    background-color: rgb(230, 230, 230);
+    background-color: rgb(255, 255, 255);
 }
 .maasai_contents{
 display: flex;
@@ -284,6 +301,17 @@ justify-content: space-around;
 .row_day{
     flex-direction: column;
 }
+  .popular{
+    font-size: 24px;
+    font-weight: 300;
+    text-transform: uppercase;
+  }
+  .title-main{
+    font-size: 24px;
+    font-weight: 300;
+    text-transform: uppercase;
+    margin: 1rem 0;
+  }
 }
 
 @media all and (max-width: 1029px) {
@@ -334,6 +362,20 @@ justify-content: space-around;
   margin: 0 auto;
   padding:5rem 0;
 }
+.days_heading{
+    display: flex;
+    justify-content: center;
+    text-transform: uppercase;
+    color: #2c3e50;
+    margin: 1rem 0;
+}
+
+.day_by_day{
+    margin: 2rem 1rem;
+    background-color: whitesmoke;
+    padding: 2rem ;
+}
+
 
 @media all and (max-width: 641px) {
   .wrapper {
@@ -459,7 +501,7 @@ h3.title-main {
   line-height: 45px;
   color: #2C3038;
   text-align: center;
-  margin-bottom: 12px;
+  margin: 3.5rem 0;
 }
 
 h3.title-white {
@@ -2224,6 +2266,11 @@ a.button-dark {
     color: rgb(190, 184, 184);
     margin: 1rem 0;
     text-transform: uppercase;
+}
+.card_payment{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 .cards{
     width: 80px;
