--- a/assets/css/style-freedom.css
+++ b/assets/css/style-freedom.css
@@ -290,6 +290,10 @@ justify-content: space-around;
     margin: .5rem;
     width: 90%;
   }
+  .title-main{
+      font-size: 24px;
+      text-transform: lowercase;
+  }
 .header h1 a{
     font-size: 14px;
     font-weight: 100;
